Fixed news responsiveness on mobile

--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -49,11 +49,11 @@ h6 {
 }
 
 h1 {
-  font-size: 20px;
+  font-size: 24px;
 }
 
 h2 {
-  font-size: 16px;
+  font-size: 20px;
 }
 
 @media (min-width: 480px) {
@@ -62,7 +62,7 @@ h2 {
   }
 
   h2 {
-    font-size: 24px;
+    font-size: 28px;
   }
 }
 
